fix inifition boolean constructor